--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 body{
     box-sizing: border-box;
     margin: 0;
-    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 .header{
@@ -24,6 +24,82 @@ body{
     font-size: 1.5rem;
     color: rgb(0, 0, 0);
 }
+
+.nopad{
+    padding: 0px !important;
+}
+.openBtn {
+    display: flex;
+  }
+.openButton {
+    border: none;
+    background-color:white;
+    cursor: pointer;
+    padding: 20px;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 1.2rem;
+}
+button:hover{
+    background-color: rgb(205, 205, 205);
+    color: black;
+}
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 8;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.4);
+  }
+  .modal-content {
+    margin: 50px auto;
+    border: 1px solid #999;
+    width: 40%;
+  }
+  span {
+    color: #666;
+    display: block;
+    padding: 0 0 5px;
+  }
+  form {
+    padding: 25px;
+    margin: 25px;
+    box-shadow: 0 2px 5px #f5f5f5;
+    background: #eee;
+  }
+  input,
+  textarea {
+    width: 90%;
+    padding: 10px;
+    margin-bottom: 20px;
+    border: 1px solid #1c87c9;
+    outline: none;
+  }
+  .contact-form button {
+    width: 95%;
+    padding: 10px;
+    border: none;
+    background: #1c87c9;
+    font-size: 16px;
+    font-weight: 400;
+    color: #fff;
+  }
+  .close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  .close:hover,
+  .close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+  }
 
 .nav-link{
     display: flex;
@@ -54,6 +130,18 @@ body{
     background-color: rgb(23, 77, 194);
 }
 
-.banner h1,.banner p{
-    width: 80%;
+.content{
+    display: flex;
+    padding: 100px 50px;
+    justify-content: space-around;
+}
+
+
+.tiles{
+    border: 1px solid grey;
+    border-radius: 5px;
+}
+
+img{
+    width: 150px;
 }
